--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongo": "^0.1.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
     "react": "^19.0.0",
