--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "mongo": "^0.1.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
+    "peer": "^1.0.2",
     "react": "^19.0.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
